--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
-*{
+/*
+Colors:
+Primary - Charcoal #1d252a
+Secondary - Sage Green #8FBC8F
+Accent - Soft Pink #ea8484
+Background - White #FFF
+*/
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Kumb Sans', asns-serif;
+    font-family: 'Kumb Sans', sans-serif;
 }
+
 .navbar {
-    background: #131313;
+    background: #1d252a;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -23,13 +32,14 @@
     z-index: 1;
     width: 100%;
     max-width: 1300px;
-    margin: 0 auto;
-    padding: 0 50px;
-}
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 50px;
+    padding-left: 50px;
+  }
 
 #navbar__logo {
-    background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-color: #8FBC8F;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -58,7 +68,7 @@
 }
 
 .navbar__links {
-    color: #fff;
+    color: #8FBC8F;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,82 +82,126 @@
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
-    width: 100%
+    width: 100%;
 }
 
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background: #ea8484;
+    color: #1d2a21;
+  }
+
+.button:hover {
+    background:#dd8ee4 ;
+    transition: all 0.3s ease;
+}
+  
 .navbar__links:hover {
-    color: #f77062;
+    color: #ffffff;
     transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 960px) {
     .navbar__container {
-        display: flex;
-        justify-content: space-between;
-        height: 80px;
-        z-index: 1;
-        width: 100%;
-        max-width: 1300px;
-        padding: 0;
+      display: flex;
+      justify-content: space-between;
+      height: 80px;
+      z-index: 1;
+      width: 100%;
+      max-width: 1300px;
+      padding: 0;
     }
-
+  
     .navbar__menu {
-        display: grid;
-        grid-template-columns: auto;
-        margin: 0;
-        width: 100%;
-        position: absolute;
-        /*top: -1000px;
-        opacity: 0; */
-        transition: all 0.5s ease;
-        height: 50vh;
-        z-index: -1;
-        background: #131313;
+      display: grid;
+      grid-template-columns: auto;
+      margin: 0;
+      width: 100%;
+      position: absolute;
+      top: -1000px;
+      opacity: 1;
+      transition: all 0.5s ease;
+      height: 50vh;
+      z-index: -1;
     }
-
+  
     .navbar__menu.active {
-        background: #131313;
-        top: 100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 99;
-        height: 50vh;
-        font-size: 1.6rem;
+      background: #1d252a;
+      top: 100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 99;
+      height: 50vh;
+      font-size: 1.6rem;
     }
-
+  
     #navbar__logo {
-        padding-left: 25px;
+      padding-left: 25px;
     }
-
-    .navbar_toggle .bar {
-        width: 25px;
-        height: 3px;
-        margin: 5px auto;
-        transition: all 0.3s ease-in-out;
-        background: #fff;
+  
+    .navbar__toggle .bar {
+      width: 25px;
+      height: 3px;
+      margin: 5px auto;
+      transition: all 0.3s ease-in-out;
+      background: #8FBC8F;
     }
-
+  
     .navbar__item {
-        width: 100%;
+      width: 100%;
     }
-
+  
     .navbar__links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
     }
-
-    #mobile-menu {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-    }
-
+  
     .navbar__btn {
-        padding-bottom: 2rem;
+      padding-bottom: 2rem;
     }
-
-
+  
+    .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 70%;
+      height: 80px;
+      margin: 0;
+    }
+  
+    #mobile-menu {
+      position: absolute;
+      top: 20%;
+      right: 5%;
+      transform: translate(5%, 20%);
+    }
+  
+    .navbar__toggle .bar {
+      display: block;
+      cursor: pointer;
+    }
+  
+    #mobile-menu.is-active .bar:nth-child(2) {
+      opacity: 0;
+    }
+  
+    #mobile-menu.is-active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+  
+    #mobile-menu.is-active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
 }
+ 
