--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ Background - White #FFF
     margin-left: auto;
     padding-right: 50px;
     padding-left: 50px;
-  }
+}
 
 #navbar__logo {
     background-color: #8FBC8F;
@@ -98,13 +98,13 @@ Background - White #FFF
     border-radius: 4px;
     background: #ea8484;
     color: #1d2a21;
-  }
+}
 
 .button:hover {
-    background:#dd8ee4 ;
+    background: #dd8ee4;
     transition: all 0.3s ease;
 }
-  
+
 .navbar__links:hover {
     color: #ffffff;
     transition: all 0.3s ease;
@@ -112,96 +112,185 @@ Background - White #FFF
 
 @media screen and (max-width: 960px) {
     .navbar__container {
-      display: flex;
-      justify-content: space-between;
-      height: 80px;
-      z-index: 1;
-      width: 100%;
-      max-width: 1300px;
-      padding: 0;
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
     }
-  
+
     .navbar__menu {
-      display: grid;
-      grid-template-columns: auto;
-      margin: 0;
-      width: 100%;
-      position: absolute;
-      top: -1000px;
-      opacity: 1;
-      transition: all 0.5s ease;
-      height: 50vh;
-      z-index: -1;
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 1;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
     }
-  
+
     .navbar__menu.active {
-      background: #1d252a;
-      top: 100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 99;
-      height: 50vh;
-      font-size: 1.6rem;
+        background: #1d252a;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6rem;
     }
-  
+
     #navbar__logo {
-      padding-left: 25px;
+        padding-left: 25px;
     }
-  
+
     .navbar__toggle .bar {
-      width: 25px;
-      height: 3px;
-      margin: 5px auto;
-      transition: all 0.3s ease-in-out;
-      background: #8FBC8F;
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: #8FBC8F;
     }
-  
+
     .navbar__item {
-      width: 100%;
+        width: 100%;
     }
-  
+
     .navbar__links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
     }
-  
+
     .navbar__btn {
-      padding-bottom: 2rem;
+        padding-bottom: 2rem;
     }
-  
+
     .button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 70%;
-      height: 80px;
-      margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 70%;
+        height: 80px;
+        margin: 0;
     }
-  
+
     #mobile-menu {
-      position: absolute;
-      top: 20%;
-      right: 5%;
-      transform: translate(5%, 20%);
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
     }
-  
+
     .navbar__toggle .bar {
-      display: block;
-      cursor: pointer;
+        display: block;
+        cursor: pointer;
     }
-  
+
     #mobile-menu.is-active .bar:nth-child(2) {
-      opacity: 0;
+        opacity: 0;
     }
-  
+
     #mobile-menu.is-active .bar:nth-child(1) {
-      transform: translateY(8px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
     }
-  
+
     #mobile-menu.is-active .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
     }
 }
- 
+
+
+
+/* Search Engine Sections */
+.main {
+    background-color: #fff;
+}
+
+.main__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 90vh;
+    background-color: #fff;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+
+.main__header {
+    text-align: center;
+    margin-bottom: 20px;
+    grid-column: 1 / -1;
+    position: relative;
+    z-index: 2;
+    color: #1d252a;
+    margin-top: -20px;
+}
+
+.main__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin-top: 20px;
+}
+
+.main__img--container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#main__img {
+    width: auto;
+    height: 80vh;
+    position: fixed;
+    top: 20%;
+    left: 24%;
+    z-index: 1;
+}
+
+.zipcode__input, .main__btn {
+    padding: 10px;
+    border: 1px solid #8FBC8F;
+    border-radius: 4px;
+    width: 80%;
+    max-width: 300px;
+    position: absolute;
+    top: -20%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+}
+
+.main__btn {
+    top: 5%;
+    background-color: #8FBC8F;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    z-index: 3;
+}
+
+.main__btn a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main__btn:hover {
+    background-color: #74a388;
+    transition: background-color 0.3s ease;
+}
