--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,8 @@ Background - White #FFF
     color: #fff;
     cursor: pointer;
     text-align: center;
+    position: absolute;
+    top: -5%;
     z-index: 3;
 }
 
