--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -121,7 +121,7 @@
         width: 100%;
         position: absolute;
         top: -1000px;
-        opacity: 1;
+        opacity: 0;
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
@@ -133,7 +133,7 @@
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
+        height: auto;
         font-size: 1.6rem;
     }
 
