--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,22 @@ Button Color - Green #8FBC8F
 .search-container {
     position: relative; /* Ensure parent has a position */
 }
+
+/* heart icon */
+.heart-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.heart-icon img {
+    width: 24px;
+    height: 24px;
+}
+
+.listing {
+    position: relative; /* Ensure the heart icon is positioned relative to this container */
+    padding: 15px;
+}
+/* heart icon end */
