--- a/favorites.css
+++ b/favorites.css
@@ -20,13 +20,42 @@
 }
 
 #favoritesList li {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f2f2f2;
-    border-radius: 4px;
+    padding: 8px;
+    margin: 10px 0;
+    background: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 2px solid #8FBC8F; /* Green border */
+}
+
+#favoritesList .listing {
+    padding: 15px;
+    font-family: 'Arial, sans-serif'; /* Ensure this matches the font used in styles.css */
+    position: relative; /* Ensure the heart icon is positioned relative to this container */
+}
+
+#favoritesList .listing h3 {
+    margin: 0 0 10px;
+}
+
+#favoritesList .listing p {
+    margin: 5px 0;
 }
 
 #favoritesList li:hover {
-    background-color: #e0e0e0;
+    background: #ececec;
     cursor: pointer;
+}
+
+/* heart icon */
+.heart-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.heart-icon img {
+    width: 24px;
+    height: 24px;
 }
