Updated css variable to avoid problems. Does not impact anything.

--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -34,6 +34,7 @@
 #navbar__logo {
     background-color: #8FBC8F;
     background-size: 100%;
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
